# simple_logger

./: .gitignore  README.md  pyproject.toml
docs/: simple_logger.md
simple_logger/: __init__.py  logger.py  pyproject.toml  test_logger.py
