[project]
name = "simple_logger"
version = "2.0.1"
description = "Lightweight logger with colored console and clean file logs"
authors = [
    { name = "Gabriel JF", email = "gabriel.de.fombelle@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "colorama>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simple_logger"]