[tool.poetry]
name = "simple_logger"
version = "0.1.0"
description = "A simple logger for python projects."
authors = ["Gabriel"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
